src/pages/AboutMe/AboutMe.scss
@use "../../styles/partials/mixins" as *;
@use "../../styles/partials/variables" as *;

.about {
  @include display-flex(flex, column);
  gap: 0;
  scroll-behavior: smooth;
}

.about-parallax {
  padding: 0;
  margin: 0;
  height: 90vh;
  overflow-x: hidden;
  overflow-y: scroll;
  perspective: 300px;
  @include desktop {
    width: 100vw;
  }
}

.about-hero {
  position: relative;
  height: 90vh;
  width: 100vw;
  transform-style: preserve-3d;
  z-index: -1;
  @include desktop {
    width: 100vw;
  }
  &__layer {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
  }

  &__arrow {
    animation: moveIcon ease-in-out 1s;
    animation-direction: alternate;
    animation-iteration-count: infinite;
    align-self: flex-end;
    @keyframes moveIcon {
      from {
        top: 0;
      }
      to {
        top: 0.5em;
      }
    }
  }
}

.sky {
  mask: linear-gradient(transparent, transparent, $color-primary-black);
  background: url("../../assets/images/about-me-main-sky.png") no-repeat center;
  background-size: cover;
  transform: translateZ(-400px) scale(2.33333333);
  z-index: -3;
  opacity: 0.5;
  @include desktop {
    background: url("../../assets/images/about-me-main-sky-desktop.png")
      no-repeat center;
    transform: translateZ(-250px) scale(1.833333333);
    opacity: 0.25;
    background-position: 50% 75%;
    background-size: cover;
  }
}

.mountains {
  background: url("../../assets/images/about-me-main-mountains-lake.png")
    no-repeat center;
  background-size: cover;
  transform: translateZ(-250px) scale(1.833333333);
  z-index: -2;
  mask: linear-gradient($color-primary-black, transparent, transparent);
  opacity: 0.75;
  @include desktop {
    background: url("../../assets/images/about-me-main-mountains-lake-desktop.png")
      no-repeat center;
    transform: translateZ(-125px) scale(1.4167);
    background-position: 50% 75%;
    background-size: cover;
  }
}

.me {
  background: url("../../assets/images/about-me-foreground.png") no-repeat
    center;
  background-size: cover;
  transform: translateZ(0) scale(1);
  z-index: -1;
  mask: linear-gradient(
    $color-primary-black,
    $color-primary-black,
    transparent
  );
  // backdrop-filter: blur(2px);
  @include tablet {
    background: url("../../assets/images/about-me-foreground-tablet.png")
      no-repeat center;
    background-size: cover;
  }
  @include desktop {
    background: url("../../assets/images/about-me-foreground-desktop.png")
      no-repeat center;
    background-position: 50% 75%;
    background-size: cover;
  }
}

.hero-text {
  background-size: cover;
  transform: translateZ(0) scale(1);
  @include tablet {
    position: absolute;
    top: 10%;
  }
}

.about-image {
  width: 100%;
  border-radius: 1em;
}

.about-text {
  &__icon-group {
    width: 100%;
    @include display-flex(flex, row, space-around, baseline);
    z-index: -2;
    @include desktop {
      width: 30%;
      gap: 1em;
    }
  }
  &__text {
    text-align: left;
  }
  &__group {
    padding: 2em;
    padding-top: 0;
    @include display-flex(flex, column);
    gap: 3em;
    @include tablet {
      padding-bottom: 5em;
    }
    @include desktop {
      margin: auto;
      gap: 4em;
      @include desktop {
        width: 50%;
      }
    }
  }
  &__chunk {
    @include display-flex(flex, column, normal, flex-start);
    gap: 1em;
    text-align: left;
  }
  &__title {
    margin: 0;
  }
}

